tests/react_hocs/react_hocs.exp
Error: Bad.js:11
 11: const Bad = (props: Props) => null;
                 ^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
137:   | React$StatelessFunctionalComponent<Props>
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React.StatelessFunctionalComponent. See lib: <BUILTINS>/react.js:137
  Callable property is incompatible:
     11: const Bad = (props: Props) => null;
                     ^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
    122:   (props: Props, context: any): React$Node,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:122
      The first parameter is incompatible:
                                     v-
         15: ): (React.ComponentType<{|
         16:   ...Props,
         17:   ...ExtraProps,
         18: |}>) => React.ComponentType<Props> {
             -^ object type. This type is incompatible with. See: hocs.js:15
         11: const Bad = (props: Props) => null;
                                 ^^^^^ Props
          Property `bar` is incompatible:
             18:     bar: buz,
                          ^^^ string. This type is incompatible with
              8:   bar: number,
                        ^^^^^^ number

Error: Bad.js:11
 11: const Bad = (props: Props) => null;
                 ^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
137:   | React$StatelessFunctionalComponent<Props>
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React.StatelessFunctionalComponent. See lib: <BUILTINS>/react.js:137
  Callable property is incompatible:
     11: const Bad = (props: Props) => null;
                     ^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
    122:   (props: Props, context: any): React$Node,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:122
      The first parameter is incompatible:
                                     v-
         15: ): (React.ComponentType<{|
         16:   ...Props,
         17:   ...ExtraProps,
         18: |}>) => React.ComponentType<Props> {
             -^ object type. This type is incompatible with. See: hocs.js:15
         11: const Bad = (props: Props) => null;
                                 ^^^^^ Props
          Property `foo` is incompatible:
             11: const Bad = (props: Props) => null;
                                     ^^^^^ property `foo`. Property not found in
                                         v-
             15: ): (React.ComponentType<{|
             16:   ...Props,
             17:   ...ExtraProps,
             18: |}>) => React.ComponentType<Props> {
                 -^ object type. See: hocs.js:15

Error: Good.js:15
 15:   mapProps(({ foo, buz, qux }) => ({
                   ^^^ property `foo`. Property not found in
  9: <Good buz={2} qux={3} />; // Error: Missing foo
     ^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `Good`. See: Good_use.js:9

Error: Good.js:15
 15:   mapProps(({ foo, buz, qux }) => ({
                        ^^^ property `buz`. Property not found in
  8: <Good foo={1} qux={3} />; // Error: Missing buz
     ^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `Good`. See: Good_use.js:8

Error: Good.js:15
 15:   mapProps(({ foo, buz, qux }) => ({
                             ^^^ property `qux`. Property not found in
  7: <Good foo={1} buz={2} />; // Error: Missing qux
     ^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `Good`. See: Good_use.js:7

Error: Good.js:17
 17:     buz: buz * 2,
              ^^^ string. The operand of an arithmetic operation must be a number.

Error: Good.js:18
 18:     qux,
         ^^^ string. This type is incompatible with
  9:   qux: number,
            ^^^^^^ number


Found 7 errors
